# AliJaddi

./: .env.example  .gitignore  Ali12.py  AliJaddi_Build.bat  AliJaddi_Build.ps1  AliJaddi_Setup.iss  Build_Installer.bat  Hassan12.py  Hussein12.py  README.md  build_android.sh  build_macos.sh  build_windows.bat  launch.py  main.py  main_qt.py  pyproject.toml  pytest.ini  sync_euqid_folder_path.ps1  theme.py
12/: ali12_engine.py  hassan12_engine.py  hussein12_engine.py  manifest.json
AliJaddi 12/: README.md
AliJaddi 12/Hussein12/: LICENSE  README.md  pyproject.toml
AliJaddi 12/Hussein12/src/hussein12/: __init__.py  __main__.py  cli.py  platform.py  web_app.py
AliJaddi 12/Hussein12/src/hussein12/ai/: __init__.py  model.py
AliJaddi 12/Hussein12/src/hussein12/microservices/: __init__.py
AliJaddi 12/Hussein12/src/hussein12/plugins/: __init__.py
AliJaddi 12/Hussein12/src/hussein12/store/: __init__.py
AliJaddi 12/Hussein12/src/hussein12/utils/: __init__.py
AliJaddi 12/Hussein12/tests/: test_core.py  test_web.py
AliJaddi Account/: .env.example  .gitignore  README.md  config.py  run.py  run_desktop.py
AliJaddi Cloud/: README.md
Applications AliJaddi/: README.md
Store AliJaddi/: Install-StoreAliJaddi.ps1  README.md  config.py  requirements-desktop.txt  requirements.txt  run.py  run_store12.py
addons/: registry.json  store_experience.json
alijaddi/: __init__.py  __main__.py  config.py  launcher.py  models.py  qt_host_bridge.py  supabase_client.py  visual_identity.py  workspace.py
app/: main.py
bento_serving/: bentofile.yaml  requirements.txt  routing.py  service.py
docs/: ARCHITECTURE.md
flutter_alijaddi/: README.md  pubspec.yaml
installer/: LicenseAgreement.txt  Welcome.txt
scripts/: ali12_store_install.py  apply_cloud_migrations.ps1  build_inno_installer.ps1  build_windows_release.ps1  clean_old_releases.ps1  export_ali12_training_jsonl.py  export_android_to_tanzeel.ps1  github_commercial.ps1  manage_verify_task.ps1  pack_dental_assistant.ps1  pack_windows_zip.ps1  push_to_github.ps1  reinstall_incubator_models.py  run_bento_serving.ps1  run_verify_scheduled.bat  run_verify_scheduled.ps1  setup_flutter_app.ps1  setup_supabase.ps1  smoke_ali12_telemetry.py  supabase_db_push.ps1  supabase_schema.sql  verify_ecosystem.py
services/: addon_manager.py  api_gateway_stub.py  assistants_squad.py  auth_service.py  bento_integration_stub.py  contribution_stars.py  desktop_shortcut.py  install_telemetry.py  legacy_data.py  local_store.py  model_catalog.py  models_data.py  paths.py  platform_data.py  platform_release_download.py  platform_store.py  platform_sync.py  platform_update.py  shell_launch.py  squad12_paths.py  store_experience.py  store_install_standard.py
supabase/: SQL_EDITOR_optional_migrations.sql  config.toml  remote_apply_radt_removal_and_grants.sql
tests/: conftest.py  test_addon_extract.py  test_addon_registry.py  test_ali12.py  test_ali12_store_cli.py  test_alijaddi_registry.py  test_assistants_squad.py  test_bento_serving_routing.py  test_dental_manifest.py  test_hassan12.py  test_hussein12.py  test_identity_and_bridge.py  test_install_telemetry.py  test_installed_paths.py  test_legacy_data.py  test_local_store_stars.py  test_main_navigation.py  test_model_catalog.py  test_models_data.py  test_paths.py  test_platform_1000_virtual_users.py  test_platform_data.py  test_platform_release_pick.py  test_platform_store.py  test_platform_sync.py  test_platform_update.py  test_shell_launch.py  test_smoke.py  test_squad12_paths.py  test_store_experience.py
training/: Ali12_seed.jsonl  README.txt  (+1 more)
ui/: i18n.py  (+6 more)
(+138 files in other folders)
