[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hussein12"
version = "0.1.0"
description = "مكتبة بايثون عالية المستوى بواجهات عربية لدمج الذكاء الاصطناعي ومتجر التطبيقات والإضافات"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hussein12 contributors" }]
keywords = ["arabic", "ai", "plugins", "store", "microservices"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Natural Language :: Arabic",
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
ai = [
  "bentoml>=1.2.0",
  "transformers>=4.36.0",
  "torch>=2.1.0",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.1",
  "httpx>=0.26",
]

[project.scripts]
hussein12 = "hussein12.cli:main"

[project.urls]
Homepage = "https://github.com/hussein12/hussein12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
